--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^2.3.1",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
+    "express-flash": "^0.0.2",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "handlebars": "^4.7.3",
     "mongoose": "^5.9.6",
     "uuid": "^7.0.2"
