--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express-session": "^1.17.0",
     "handlebars": "^4.7.3",
     "mongoose": "^5.9.6",
+    "nodemailer": "^6.4.6",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
