--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.3.1",
+    "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
@@ -22,6 +24,7 @@
     "express-validator": "^6.4.0",
     "handlebars": "^4.7.3",
     "mongoose": "^5.9.6",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "uuid": "^7.0.2"
