--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.3",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "connect-mongodb-session": "^2.3.1",
-    "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
@@ -23,6 +22,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "handlebars": "^4.7.3",
+    "helmet": "^3.22.0",
     "mongoose": "^5.9.6",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
